Fix bug horizontal scroll on firefox

--- a/static/_screen.sass
+++ b/static/_screen.sass
@@ -343,7 +343,7 @@ nav ul
   ol
     counter-reset: reasons
     margin: 1.2em auto 0
-    max-width: 45em
+    overflow: hidden
     padding: 0 10% 3em
 
     li
@@ -733,6 +733,7 @@ form
     display: block
     font-family: inherit
     margin: 0
+    max-width: 100%
     padding: 0.75em
     -webkit-appearance: none
     width: 100%
